--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,11 @@
   font-style: italic;
   font-size: 18px;
 }
+@media (max-width:420px){
+  .container img{
+    width: 250px;
+  }
+  .textoFrase{
+    width: 250px;
+  }
+}
